prime/infra/dev/monitoring-pushgateway.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pushgateway-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pushgateway-server
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: pushgateway
        image: prom/pushgateway:v0.5.2
        ports:
        - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: pushgateway
spec:
  selector:
    app: pushgateway-server
  type: NodePort
  ports:
  - port: 8080
    targetPort: 9091
