prime/infra/dev/neo4j.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j
  labels:
    app: neo4j
    component: core
spec:
  clusterIP: None
  ports:
  - port: 7474
    targetPort: 7474
    name: browser
  - port: 6362
    targetPort: 6362
    name: backup
  selector:
    app: neo4j
    component: core
---
apiVersion: "apps/v1beta1"
kind: StatefulSet
metadata:
  name: neo4j-core
spec:
  serviceName: neo4j
  replicas: 3
  template:
    metadata:
      labels:
        app: neo4j
        component: core
    spec:
      containers:
      - name: neo4j
        image: "neo4j:3.4.8-enterprise"
        imagePullPolicy: "IfNotPresent"
        command:
        - "/bin/bash"
        - "-ecx"
        - |
          export NEO4J_dbms_connectors_default__advertised__address=$(hostname -f)
          export NEO4J_causal__clustering_discovery__advertised__address=$(hostname -f):5000
          export NEO4J_causal__clustering_transaction__advertised__address=$(hostname -f):6000
          export NEO4J_causal__clustering_raft__advertised__address=$(hostname -f):7000
          exec /docker-entrypoint.sh "neo4j"
        ports:
        - containerPort: 5000
          name: discovery
        - containerPort: 7000
          name: raft
        - containerPort: 6000
          name: tx
        - containerPort: 7474
          name: browser
        - containerPort: 7687
          name: bolt
        - containerPort: 6362
          name: backup
        securityContext:
          privileged: true
        volumeMounts:
        - name: datadir
          mountPath: "/data"
  volumeClaimTemplates:
  - metadata:
      name: datadir
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "faster"
      resources:
        requests:
          storage: "10Gi"
