prime/infra/dev/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prime-api-test1-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: api-esp-ip-test1
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
  labels:
    app: prime
    tier: backend
spec:
  backend:
    serviceName: prime-api-test1
    servicePort: 80
  tls:
    - secretName: api-dev4life-org-tls
      hosts:
        - api.dev4life.org
